# ird-tax-oracle

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  yoyo.ini
config/: __init__.py  embeddings.yaml  settings.py  sources.yaml  sources_taxtechnical.yaml
docs/: architecture.mermaid  data-sources.md  design.md  prompt_design.md  taxtechnical.ird.nz.md
migrations/: 0001_extensions.py  0002_document_sources.py  0003_document_chunks.py  0004_taxtechnical_fields.py  0005_query_log.py  0006_tax_years_and_brackets.py  0007_query_log_metrics.py
scripts/: eval.py  feedback_report.py  ingest.py  migrate.py  seed_tax_rules.py
src/: orchestrator.py
src/api/: app.py  routes.py
src/calculators/: __init__.py  acc.py  income_tax.py  paye.py  student_loan.py  tax_data.py
src/db/: models.py  query_log.py  session.py
src/ingestion/: chunker.py  crawler.py  pipeline.py
src/llm/: gateway.py  postprocess.py  prompts.py  query_rewriter.py  tools.py
src/rag/: embedder.py  reranker.py  retriever.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: conftest.py  test_api.py  test_auth_middleware.py  test_calculators.py  test_chunker.py  test_crawler.py  test_llm_gateway.py  test_orchestrator.py  test_parser.py  test_pdf_parser.py  test_postprocess.py  test_prompts.py  test_query_rewriter.py  test_reranker.py  test_retriever.py  test_stream_and_feedback.py  test_taxtechnical_parser.py
tests/eval/: conftest.py  test_retrieval_quality.py  test_scenarios.yaml
tests/fixtures/: ird_guidance_page.html  (+2 more)
(+3 files in other folders)
